--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <div class="foto">
         <!-- Aquí va la foto -->
-        <img src="C:\Users\USUARIO\Desktop\WEBPRIMABUDDAH\img\foto.jpg" alt="Foto de perfil">
+        <img src="img\foto.jpg" alt="Foto de perfil">
     </div>
 
     <div class="section">
@@ -121,4 +121,5 @@
     </div>
 
 </body>
+
 </html>
